# SpaceshipGame

./: .gitignore  CMakeLists.txt  bld.bat  bldw.bat  build.bat  delete.bat  fbs  run  run.bat  runw.bat
build_system/: config.h  fbs  fbs.c  fbs.h  fbs_project.c  fbs_raylib.c
game/headers/: gameEntities.h  player.h
game/src/: gameEntities.cpp  player.cpp
headers/: entities.h  entity.h  rendering.h  scene.h
src/: entities.cpp  entity.cpp  main.cpp  rendering.cpp
